--- a/FiveActivities/app/src/main/AndroidManifest.xml
+++ b/FiveActivities/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.FiveActivities"
         tools:targetApi="31">
         <activity
+            android:name=".TrashActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SelectIconActivity"
+            android:exported="false" />
+        <activity
             android:name=".NoteDetailsActivity"
             android:exported="false" />
         <activity
